@@ -1,5 +1,9 @@
 === rmw ChangeLog ===
 
+2016-09-25
+
+    -p / --pause option removed
+
 2016-09-18
 
     Issue #40 - To empty the trash, preface rmw on the command line
